# TTS

TTS/: README.md  pyproject.toml  requirements.txt
TTS/configs/: pipeline.example.yaml
TTS/data/reference_speakers/: README.md
TTS/outputs/egy_ar_demo/: pipeline.db
TTS/outputs/egy_ar_demo/manifests/: generated_prompts.jsonl
TTS/src/egy_tts_pipeline/: cli.py  config.py  db.py  exporter.py  prompt_generation.py  quality.py  review_app.py  synthesis.py  text_normalization.py  utils.py
TTS/src/egy_tts_pipeline/templates/: review.html
TTS/src/egyptian_arabic_synth_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
TTS/tests/: test_exporter.py  test_prompt_generation.py  test_text_normalization.py
