[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egyptian-arabic-synth-pipeline"
version = "0.1.0"
description = "Synthetic Egyptian Arabic speech dataset pipeline built around Coqui XTTS."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<2.0",
  "PyYAML>=6.0",
  "pydantic>=2.7",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "aiofiles>=23.2",
  "coqui-tts>=0.27.5",
  "transformers>=4.57,<5.0",
]

[project.scripts]
egy-tts-pipeline = "egy_tts_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
